update to ST modules to use monica layers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,13 +26,13 @@ set_absolute_path(AMEI_COMPONENTS_DIR ../SoilTemperatureModels/Models)
 
 #add_compile_definitions(SKIP_BUILD_IN_MODULES)
 
-if (NOT TARGET Monica_SoilTemp_lib AND TRUE)
+if (NOT TARGET Monica_SoilTemp_lib AND FALSE)
     add_compile_definitions(MONICA_SOILTEMP)
     message(STATUS "target: Monica_SoilTemp_lib")
     add_subdirectory(${AMEI_COMPONENTS_DIR}/Monica_SoilTemp/src/cpp/Monica_SoilTemp amei-components/Monica_SoilTemp)
 endif ()
 
-if (NOT TARGET DSSAT_ST_standalone_lib AND FALSE)
+if (NOT TARGET DSSAT_ST_standalone_lib AND TRUE)
     add_compile_definitions(DSSAT_ST_STANDALONE)
     message(STATUS "target: DSSAT_ST_standalone_lib")
     add_subdirectory(${AMEI_COMPONENTS_DIR}/DSSAT_ST_standalone/src/cpp/DSSAT_ST_standalone amei-components/DSSAT_ST_standalone)
