--- a/.github/workflows/on-tag.yml
+++ b/.github/workflows/on-tag.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-        
+
         - name: Checkout repository
           uses: actions/checkout@v3
 
@@ -44,7 +44,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           path: "monica"
-  
+
       # dependent repository mas-infrastructure
       - name: Checkout dependent repository
         uses: actions/checkout@v3
@@ -59,12 +59,17 @@ jobs:
           repository: zalf-rpm/monica-parameters
           ref: master 
           path: "monica-parameters"
-  
+
+      - name: Read vcpkg tag to use
+        id: vcpkg_tag
+        run: |
+          echo "vcpkg_tag=$(cat vcpkg_tag.txt)" >> $GITHUB_OUTPUT
+
       - name: Checkout vcpkg
         uses: actions/checkout@v3
         with:
           repository: microsoft/vcpkg
-          ref: 2024.09.30
+          ref: ${{ steps.vcpkg_tag.outputs.vcpkg_tag }}
           path: "vcpkg"
   
       - name: Set up MSVC compiler
