--- a/.github/workflows/windows_build_install_package.yml
+++ b/.github/workflows/windows_build_install_package.yml
@@ -31,11 +31,16 @@ jobs:
           ref: master 
           path: "monica-parameters"
 
+      - name: Read vcpkg tag to use
+        id: vcpkg_tag
+        run: |
+          echo "vcpkg_tag=$(cat vcpkg_tag.txt)" >> $GITHUB_OUTPUT
+
       - name: Checkout vcpkg
         uses: actions/checkout@v4
         with:
           repository: microsoft/vcpkg
-          ref: 2024.09.30
+          ref: ${{ steps.vcpkg_tag.outputs.vcpkg_tag }}
           path: "vcpkg"
 
       - name: Debug directory structure
