--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,52 +27,55 @@ set_absolute_path(AMEI_COMPONENTS_DIR ../SoilTemperatureModels/Models)
 add_compile_definitions(AMEI_SENSITIVITY_ANALYSIS)
 add_compile_definitions(MONICA_ORIG_SOILTEMP)
 
+set(CPP_FOLDER_NAME "cpp2")
+add_compile_definitions(CPP2)
+
 if (NOT TARGET Monica_SoilTemp_lib AND TRUE)
     add_compile_definitions(MONICA_SOILTEMP)
     message(STATUS "target: Monica_SoilTemp_lib")
-    add_subdirectory(${AMEI_COMPONENTS_DIR}/Monica_SoilTemp/src/cpp/Monica_SoilTemp amei-components/Monica_SoilTemp)
+    add_subdirectory(${AMEI_COMPONENTS_DIR}/Monica_SoilTemp/src/${CPP_FOLDER_NAME}/Monica_SoilTemp amei-components/Monica_SoilTemp)
 endif ()
 
 if (NOT TARGET DSSAT_ST_standalone_lib AND TRUE)
     add_compile_definitions(DSSAT_ST_STANDALONE)
     message(STATUS "target: DSSAT_ST_standalone_lib")
-    add_subdirectory(${AMEI_COMPONENTS_DIR}/DSSAT_ST_standalone/src/cpp/DSSAT_ST_standalone amei-components/DSSAT_ST_standalone)
+    add_subdirectory(${AMEI_COMPONENTS_DIR}/DSSAT_ST_standalone/src/${CPP_FOLDER_NAME}/DSSAT_ST_standalone amei-components/DSSAT_ST_standalone)
 endif ()
 
 if (NOT TARGET DSSAT_EPICST_standalone_lib AND TRUE)
     add_compile_definitions(DSSAT_EPICST_STANDALONE)
     message(STATUS "target: DSSAT_EPICST_standalone_lib")
-    add_subdirectory(${AMEI_COMPONENTS_DIR}/DSSAT_EPICST_standalone/src/cpp/DSSAT_EPICST_standalone amei-components/DSSAT_EPICST_standalone)
+    add_subdirectory(${AMEI_COMPONENTS_DIR}/DSSAT_EPICST_standalone/src/${CPP_FOLDER_NAME}/DSSAT_EPICST_standalone amei-components/DSSAT_EPICST_standalone)
 endif ()
 
 if (NOT TARGET Simplace_Soil_Temperature_lib AND TRUE)
     add_compile_definitions(SIMPLACE_SOIL_TEMPERATURE)
     message(STATUS "target: Simplace_Soil_Temperature_lib")
-    add_subdirectory(${AMEI_COMPONENTS_DIR}/Simplace_Soil_Temperature/src/cpp/Simplace_Soil_Temperature amei-components/Simplace_Soil_Temperature)
+    add_subdirectory(${AMEI_COMPONENTS_DIR}/Simplace_Soil_Temperature/src/${CPP_FOLDER_NAME}/Simplace_Soil_Temperature amei-components/Simplace_Soil_Temperature)
 endif ()
 
 if (NOT TARGET Stics_soil_temperature_lib AND TRUE)
     add_compile_definitions(STICS_SOIL_TEMPERATURE)
     message(STATUS "target: Stics_soil_temperature_lib")
-    add_subdirectory(${AMEI_COMPONENTS_DIR}/Stics_soil_temperature/src/cpp/Stics_soil_temperature amei-components/Stics_soil_temperature)
+    add_subdirectory(${AMEI_COMPONENTS_DIR}/Stics_soil_temperature/src/${CPP_FOLDER_NAME}/Stics_soil_temperature amei-components/Stics_soil_temperature)
 endif ()
 
 if (NOT TARGET SQ_Soil_Temperature_lib AND TRUE)
     add_compile_definitions(SQ_SOIL_TEMPERATURE)
     message(STATUS "target: SQ_Soil_Temperature_lib")
-    add_subdirectory(${AMEI_COMPONENTS_DIR}/SQ_Soil_Temperature/src/cpp/SQ_Soil_Temperature amei-components/SQ_Soil_Temperature)
+    add_subdirectory(${AMEI_COMPONENTS_DIR}/SQ_Soil_Temperature/src/${CPP_FOLDER_NAME}/SQ_Soil_Temperature amei-components/SQ_Soil_Temperature)
 endif ()
 
 if (NOT TARGET BiomaSurfacePartonSoilSWATC_lib AND TRUE)
     add_compile_definitions(BIOMASURFACEPARTONSOILSWATC)
     message(STATUS "target: BiomaSurfacePartonSoilSWATC_lib")
-    add_subdirectory(${AMEI_COMPONENTS_DIR}/BiomaSurfacePartonSoilSWATC/src/cpp/BiomaSurfacePartonSoilSWATC amei-components/BiomaSurfacePartonSoilSWATC)
+    add_subdirectory(${AMEI_COMPONENTS_DIR}/BiomaSurfacePartonSoilSWATC/src/${CPP_FOLDER_NAME}/BiomaSurfacePartonSoilSWATC amei-components/BiomaSurfacePartonSoilSWATC)
 endif ()
 
 if (NOT TARGET BiomaSurfaceSWATSoilSWATC_lib AND TRUE)
     add_compile_definitions(BIOMASURFACESWATSOILSWATC)
     message(STATUS "target: BiomaSurfaceSWATSoilSWATC_lib")
-    add_subdirectory(${AMEI_COMPONENTS_DIR}/BiomaSurfaceSWATSoilSWATC/src/cpp/BiomaSurfaceSWATSoilSWATC amei-components/BiomaSurfaceSWATSoilSWATC)
+    add_subdirectory(${AMEI_COMPONENTS_DIR}/BiomaSurfaceSWATSoilSWATC/src/${CPP_FOLDER_NAME}/BiomaSurfaceSWATSoilSWATC amei-components/BiomaSurfaceSWATSoilSWATC)
 endif ()
 
 if (NOT TARGET capnp_schemas_lib)
