moved MONICA to use git submodules -> no separate mas-infrastructure used, instead as mas_cpp_misc repo in the monica repo and in mas_cpp_misc the mas_capnproto_schemas repo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,58 +19,55 @@ macro(set_absolute_path var_name path)
     set(${var_name} ${toAbsPath})
 endmacro(set_absolute_path)
 
-set_absolute_path(MAS_INFRASTRUCTURE_DIR ../mas-infrastructure)
-set_absolute_path(CAPNP_SCHEMAS_DIR ${MAS_INFRASTRUCTURE_DIR}/capnproto_schemas)
-
 if (NOT TARGET capnp_schemas_lib)
     message(STATUS "target: capnp_schemas_lib")
-    add_subdirectory(${CAPNP_SCHEMAS_DIR}/gen/c++ mas-infrastructure/capnproto_schemas)
+    add_subdirectory(mas_cpp_misc/mas_capnproto_schemas/gen/c++ mas-infrastructure/capnproto_schemas)
 endif ()
 
 if (NOT TARGET common_lib)
     message(STATUS "target: common_lib")
-    add_subdirectory(${MAS_INFRASTRUCTURE_DIR}/src/cpp/common mas-infrastructure/common)
+    add_subdirectory(mas_cpp_misc/common common)
 endif ()
 
 if (NOT TARGET date_lib)
     message(STATUS "target: date_lib")
-    add_subdirectory(${MAS_INFRASTRUCTURE_DIR}/src/cpp/tools/date mas-infrastructure/tools/date)
+    add_subdirectory(mas_cpp_misc/tools/date tools/date)
 endif ()
 
 if (NOT TARGET helpers_lib)
     message(STATUS "target: helpers_lib")
-    add_subdirectory(${MAS_INFRASTRUCTURE_DIR}/src/cpp/tools/helpers mas-infrastructure/tools/helpers)
+    add_subdirectory(mas_cpp_misc/tools/helpers tools/helpers)
 endif ()
 
 if (NOT TARGET json11_lib)
     message(STATUS "target: json11_lib")
-    add_subdirectory(${MAS_INFRASTRUCTURE_DIR}/src/cpp/json11 mas-infrastructure/json11)
+    add_subdirectory(mas_cpp_misc/json11 json11)
 endif ()
 
 #if(NOT TARGET read_ini_lib)
 #	message(STATUS "target: read_ini_lib")
-#	add_subdirectory(${MAS_INFRASTRUCTURE_DIR}/src/cpp/tools/read-ini mas-infrastructure/tools/read-ini)
+#	add_subdirectory(mas_cpp_misc/tools/read-ini tools/read-ini)
 #endif()
 #get_target_property(read_ini_interface_includes read_ini_lib INTERFACE_INCLUDE_DIRECTORIES)
 
 if (NOT TARGET debug_lib)
     message(STATUS "target: debug_lib")
-    add_subdirectory(${MAS_INFRASTRUCTURE_DIR}/src/cpp/tools/debug mas-infrastructure/tools/debug)
+    add_subdirectory(mas_cpp_misc/tools/debug tools/debug)
 endif ()
 
 if (NOT TARGET climate_file_io_lib)
     message(STATUS "target: climate_file_io_lib")
-    add_subdirectory(${MAS_INFRASTRUCTURE_DIR}/src/cpp/climate/climate-file-io mas-infrastructure/climate/climate-file-io)
+    add_subdirectory(mas_cpp_misc/climate/climate-file-io climate/climate-file-io)
 endif ()
 
 if (NOT TARGET soil_lib)
     message(STATUS "target: soil_lib")
-    add_subdirectory(${MAS_INFRASTRUCTURE_DIR}/src/cpp/soil mas-infrastructure/soil)
+    add_subdirectory(mas_cpp_misc/soil soil)
 endif ()
 
 if (NOT TARGET zeromq_lib)
     message(STATUS "target: zeromq_lib")
-    add_subdirectory(${MAS_INFRASTRUCTURE_DIR}/src/cpp/zeromq mas-infrastructure/zeromq)
+    add_subdirectory(mas_cpp_misc/zeromq zeromq)
 endif ()
 
 #define delete file from path
