--- a/.github/workflows/on-tag.yml
+++ b/.github/workflows/on-tag.yml
@@ -14,6 +14,8 @@ jobs:
 
         - name: Checkout repository
           uses: actions/checkout@v3
+          with:
+            submodules: recursive
 
         - name: Set up Docker Buildx
           uses: docker/setup-buildx-action@v2
@@ -46,12 +48,12 @@ jobs:
           path: "monica"
 
       # dependent repository mas-infrastructure
-      - name: Checkout dependent repository
-        uses: actions/checkout@v3
-        with:
-          repository: zalf-rpm/mas-infrastructure
-          ref: master
-          path: "mas-infrastructure"
+      #- name: Checkout dependent repository
+      #  uses: actions/checkout@v3
+      #  with:
+      #    repository: zalf-rpm/mas-infrastructure
+      #    ref: master
+      #    path: "mas-infrastructure"
   
       - name: Checkout dependent repository
         uses: actions/checkout@v3
