--- a/.github/workflows/windows_build_install_package.yml
+++ b/.github/workflows/windows_build_install_package.yml
@@ -14,15 +14,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
+          submodules: recursive
           path: "monica"
 
       # dependent repository mas-infrastructure
-      - name: Checkout dependent repository
-        uses: actions/checkout@v4
-        with:
-          repository: zalf-rpm/mas-infrastructure
-          ref: master
-          path: "mas-infrastructure"
+      #- name: Checkout dependent repository
+      #  uses: actions/checkout@v4
+      #  with:
+      #    repository: zalf-rpm/mas-infrastructure
+      #    ref: master
+      #    path: "mas-infrastructure"
 
       - name: Checkout dependent repository
         uses: actions/checkout@v4
@@ -102,7 +103,7 @@ jobs:
           cp monica/_cmake_win64/Release/monica-zmq-server.exe monica_${{ github.ref_name }}/bin/
           cp monica/_cmake_win64/Release/monica-capnp-server.exe monica_${{ github.ref_name }}/bin/
           cp monica/_cmake_win64/Release/monica-capnp-fbp-component.exe monica_${{ github.ref_name }}/bin/
-          cp monica/_cmake_win64/mas-infrastructure/common/Release/channel.exe monica_${{ github.ref_name }}/bin/
+          cp monica/_cmake_win64/common/Release/channel.exe monica_${{ github.ref_name }}/bin/
           cp -r monica-parameters monica_${{ github.ref_name }}/monica-parameters/
           
           cp monica/LICENSE monica_${{ github.ref_name }}/bin/
