--- a/.github/workflows/on-tag.yml
+++ b/.github/workflows/on-tag.yml
@@ -45,6 +45,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
+          submodules: recursive
           path: "monica"
 
       # dependent repository mas-infrastructure
@@ -120,7 +121,7 @@ jobs:
           cp monica/_cmake_win64/Release/monica-zmq-server.exe monica_${{ github.ref_name }}/bin/
           cp monica/_cmake_win64/Release/monica-capnp-server.exe monica_${{ github.ref_name }}/bin/
           cp monica/_cmake_win64/Release/monica-capnp-fbp-component.exe monica_${{ github.ref_name }}/bin/
-          cp monica/_cmake_win64/mas-infrastructure/common/Release/channel.exe monica_${{ github.ref_name }}/bin/
+          cp monica/_cmake_win64/common/Release/channel.exe monica_${{ github.ref_name }}/bin/
           cp -r monica-parameters monica_${{ github.ref_name }}/monica-parameters/
   
           cp monica/LICENSE monica_${{ github.ref_name }}/bin/
