--- a/.github/workflows/windows_build_install_package.yml
+++ b/.github/workflows/windows_build_install_package.yml
@@ -36,11 +36,10 @@ jobs:
         id: vcpkg_tag
         run: |
           echo "vcpkg_tag=$(cat ./monica/vcpkg_tag.txt)" >> $GITHUB_OUTPUT
-
-      - name: Read vcpkg tag to use2
-        id: vcpkg_tag2
-        run: |
           cat ./monica/vcpkg_tag.txt
+          vcpkg_tag=$(cat ./monica/vcpkg_tag.txt)
+          echo "vcpkg_tag=$vcpkg_tag"
+          echo ${{ steps.vcpkg_tag.outputs.vcpkg_tag }}
 
       - name: Checkout vcpkg
         uses: actions/checkout@v4
