debug commit ... trying to find build problem

--- a/.github/workflows/windows_build_install_package.yml
+++ b/.github/workflows/windows_build_install_package.yml
@@ -37,8 +37,7 @@ jobs:
         run: |
           echo "vcpkg_tag=$(cat ./monica/vcpkg_tag.txt)" >> $GITHUB_OUTPUT
           cat ./monica/vcpkg_tag.txt
-          vcpkg_tag=$(cat ./monica/vcpkg_tag.txt)
-          echo "vcpkg_tag=$vcpkg_tag"
+          echo "GITHUB_OUTPUT=$GITHUB_OUTPUT"
           echo ${{ steps.vcpkg_tag.outputs.vcpkg_tag }}
 
       - name: Checkout vcpkg
