--- a/.github/workflows/windows_build_install_package.yml
+++ b/.github/workflows/windows_build_install_package.yml
@@ -35,18 +35,18 @@ jobs:
       - name: Read vcpkg tag to use
         id: vcpkg_tag
         run: |
-          echo "vcpkg_tag=2024.09.30" >> "$GITHUB_ENV"
+          echo "vcpkg_tag=2024.09.30" >> "$GITHUB_OUTPUT"
 
       - name: output tag
         id: vcpkg_tag2
         run: |
-          echo "${{ env.vcpkg_tag }}"
+          echo "${{ steps.vcpkg_tag.outputs.vcpkg_tag }}"
 
       - name: Checkout vcpkg
         uses: actions/checkout@v4
         with:
           repository: microsoft/vcpkg
-          ref: "${{ env.vcpkg_tag }}"
+          ref: ${{ steps.vcpkg_tag.outputs.vcpkg_tag }}
           path: "vcpkg"
 
       - name: Debug directory structure
