move component to use toml data via a channel reader

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,11 +45,10 @@ if (NOT TARGET json11_lib)
     add_subdirectory(mas_cpp_misc/json11 json11)
 endif ()
 
-#if(NOT TARGET read_ini_lib)
-#	message(STATUS "target: read_ini_lib")
-#	add_subdirectory(mas_cpp_misc/tools/read-ini tools/read-ini)
-#endif()
-#get_target_property(read_ini_interface_includes read_ini_lib INTERFACE_INCLUDE_DIRECTORIES)
+#if (NOT TARGET toml_lib)
+#    message(STATUS "target: toml_lib")
+#    add_subdirectory(mas_cpp_misc/toml toml)
+#endif ()
 
 if (NOT TARGET debug_lib)
     message(STATUS "target: debug_lib")
@@ -134,6 +133,9 @@ link_directories($ENV{HOME}/lib)
 
 find_package(Threads REQUIRED)
 #find_package(unofficial-sodium CONFIG REQUIRED)
+
+#find_package(PkgConfig REQUIRED)
+#pkg_check_modules(tomlplusplus REQUIRED IMPORTED_TARGET tomlplusplus)
 
 #define folder structure in vs solution corresponding to real folder structure
 GroupSources("src" ${PROJECT_SOURCE_DIR})
@@ -342,7 +344,10 @@ add_executable(daily-monica-fbp-component-main
 src/run/daily-monica-fbp-component-main.cpp
 )
 
-target_link_libraries(daily-monica-fbp-component-main monica_lib)
+target_link_libraries(daily-monica-fbp-component-main
+        monica_lib
+        #PkgConfig::tomlplusplus
+)
 
 if (MSVC)
 target_compile_options(daily-monica-fbp-component-main PRIVATE "/MT$<$<CONFIG:Debug>:d>")
