use toml++ header only file due to build problems

--- a/.github/workflows/windows_build_install_package.yml
+++ b/.github/workflows/windows_build_install_package.yml
@@ -69,7 +69,7 @@ jobs:
         run: |
           pwd
           .\vcpkg\bootstrap-vcpkg.bat
-          .\vcpkg\vcpkg install zeromq:x64-windows-static capnproto:x64-windows-static libsodium:x64-windows-static tomlplusplus:x64-windows-static
+          .\vcpkg\vcpkg install zeromq:x64-windows-static capnproto:x64-windows-static libsodium:x64-windows-static
 
       - name: Create build folder 
         working-directory: ./monica
