Add monica_proxy_out_mode environment variable and update proxy commands

--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -31,7 +31,7 @@ minprocs=200                 ; (min. avail process descriptors;default 200)
 ;files = /etc/supervisor/conf.d/*.conf
  
 [program:monica-proxy-out]
-command=/run/monica/monica-zmq-proxy -p -f %(ENV_monica_intern_out_port)s -b %(ENV_monica_consumer_port)s 
+command=/run/monica/monica-zmq-proxy %(ENV_monica_proxy_out_mode)s -f %(ENV_monica_intern_out_port)s -b %(ENV_monica_consumer_port)s 
 numprocs=1
 autostart=%(ENV_monica_autostart_proxies)s
 autorestart=%(ENV_monica_auto_restart_proxies)s
@@ -40,7 +40,7 @@ stdout_logfile_maxbytes=0
 redirect_stderr=true
 
 [program:monica-proxy-in]
-command=/run/monica/monica-zmq-proxy -p -f %(ENV_monica_producer_port)s -b %(ENV_monica_intern_in_port)s 
+command=/run/monica/monica-zmq-proxy -pps -f %(ENV_monica_producer_port)s -b %(ENV_monica_intern_in_port)s 
 numprocs=1
 autostart=%(ENV_monica_autostart_proxies)s
 autorestart=%(ENV_monica_auto_restart_proxies)s
