--- a/.github/workflows/windows_build_install_package.yml
+++ b/.github/workflows/windows_build_install_package.yml
@@ -107,6 +107,7 @@ jobs:
           cp monica/_cmake_win64/Release/monica-zmq-server.exe monica_${{ github.ref_name }}/bin/
           cp monica/_cmake_win64/Release/monica-capnp-server.exe monica_${{ github.ref_name }}/bin/
           cp monica/_cmake_win64/Release/monica-capnp-fbp-component.exe monica_${{ github.ref_name }}/bin/
+          cp monica/_cmake_win64/Release/daily-monica-fbp-component.exe monica_${{ github.ref_name }}/bin/
           cp monica/_cmake_win64/common/Release/channel.exe monica_${{ github.ref_name }}/bin/
           cp -r monica-parameters monica_${{ github.ref_name }}/monica-parameters/
           
