--- a/.gitignore
+++ b/.gitignore
@@ -218,3 +218,4 @@ _cmake_vs2019_win64
 _cmake_linux_release
 /cmake-build-debug-coverage/
 /installer/Hohenfinow2/monica-parameters
+.idea/csv-editor.xml
