--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ add_compile_definitions(CAPNPROTO_SERIALIZATION_SUPPORT)
 set(CAPNPROTO_SERIALIZATION_SUPPORT 1)
 #add_compile_definitions(INCLUDE_SR_SUPPORT)
 #set(INCLUDE_SR_SUPPORT 1)
+add_compile_definitions(TEST_FVCB_HOURLY_OUTPUT)
 add_compile_definitions(NO_MYSQL)
 add_compile_definitions(_USE_MATH_DEFINES)
 set(MT_RUNTIME_LIB 1)
