fixed acos arument error (which produced nan values) in psi calculation in lumped coeffs for hourly C3 photosynthesis

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
   "files.associations": {
     "iostream": "cpp",
     "random": "cpp",
-    "cmath": "cpp"
+    "cmath": "cpp",
+    "stdexcept": "cpp"
   }
 }
